--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 	    <title>Awesome Possum</title>
 	</head>
 	<body>
+	   <div id="app"></div>
+	<script src="index.js"></script>
 	</body>
 </html>
